js/music-parser.js
MusicParser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "note": parse_note,
        "chord": parse_chord,
        "progression": parse_progression,
        "s": parse_s
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "note";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_note() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        if (/^[A-G]/i.test(input.charAt(pos))) {
          result0 = input.charAt(pos);
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("[A-G]i");
          }
        }
        if (result0 !== null) {
          if (/^[0-9]/.test(input.charAt(pos))) {
            result1 = input.charAt(pos);
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("[0-9]");
            }
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = [];
            if (/^[\u266F#\u266Db\uD834\uDD2A\uD834\uDD2B]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[\\u266F#\\u266Db\\uD834\\uDD2A\\uD834\\uDD2B]");
              }
            }
            while (result3 !== null) {
              result2.push(result3);
              if (/^[\u266F#\u266Db\uD834\uDD2A\uD834\uDD2B]/.test(input.charAt(pos))) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("[\\u266F#\\u266Db\\uD834\\uDD2A\\uD834\\uDD2B]");
                }
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, name, octave, accidentals) {
            accidentals = accidentals.join('').replace(/#/g, '♯').replace(/b/g, '♭');
            var sharps = (accidentals.match(/♯/g) || '').length + 2 * (accidentals.match(/𝄪/g) || '').length;
            var flats = (accidentals.match(/♭/g) || '').length + 2 * (accidentals.match(/𝄫/g) || '').length;
            return {
              name: name
            , octave: octave && Number(octave)
            , sharp: sharps - flats
            }
          })(pos0, result0[0], result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_chord() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_note();
        if (result0 === null) {
          if (input.substr(pos, 1).toLowerCase() === "i") {
            result0 = input.substr(pos, 1);
            pos++;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"I\"");
            }
          }
          if (result0 === null) {
            if (input.substr(pos, 2).toLowerCase() === "ii") {
              result0 = input.substr(pos, 2);
              pos += 2;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"II\"");
              }
            }
            if (result0 === null) {
              if (input.substr(pos, 3).toLowerCase() === "iii") {
                result0 = input.substr(pos, 3);
                pos += 3;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"III\"");
                }
              }
              if (result0 === null) {
                if (input.substr(pos, 2).toLowerCase() === "iv") {
                  result0 = input.substr(pos, 2);
                  pos += 2;
                } else {
                  result0 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"IV\"");
                  }
                }
                if (result0 === null) {
                  if (input.substr(pos, 1).toLowerCase() === "v") {
                    result0 = input.substr(pos, 1);
                    pos++;
                  } else {
                    result0 = null;
                    if (reportFailures === 0) {
                      matchFailed("\"V\"");
                    }
                  }
                  if (result0 === null) {
                    if (input.substr(pos, 2).toLowerCase() === "vi") {
                      result0 = input.substr(pos, 2);
                      pos += 2;
                    } else {
                      result0 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"VI\"");
                      }
                    }
                    if (result0 === null) {
                      if (input.substr(pos, 3).toLowerCase() === "vii") {
                        result0 = input.substr(pos, 3);
                        pos += 3;
                      } else {
                        result0 = null;
                        if (reportFailures === 0) {
                          matchFailed("\"VII\"");
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (result0 !== null) {
          if (input.substr(pos, 5).toLowerCase() === "major") {
            result1 = input.substr(pos, 5);
            pos += 5;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"major\"");
            }
          }
          if (result1 === null) {
            if (input.substr(pos, 3).toLowerCase() === "maj") {
              result1 = input.substr(pos, 3);
              pos += 3;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("\"maj\"");
              }
            }
            if (result1 === null) {
              if (input.substr(pos, 5).toLowerCase() === "minor") {
                result1 = input.substr(pos, 5);
                pos += 5;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("\"minor\"");
                }
              }
              if (result1 === null) {
                if (input.substr(pos, 3).toLowerCase() === "min") {
                  result1 = input.substr(pos, 3);
                  pos += 3;
                } else {
                  result1 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"min\"");
                  }
                }
                if (result1 === null) {
                  if (input.charCodeAt(pos) === 77) {
                    result1 = "M";
                    pos++;
                  } else {
                    result1 = null;
                    if (reportFailures === 0) {
                      matchFailed("\"M\"");
                    }
                  }
                  if (result1 === null) {
                    if (input.charCodeAt(pos) === 109) {
                      result1 = "m";
                      pos++;
                    } else {
                      result1 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"m\"");
                      }
                    }
                    if (result1 === null) {
                      if (input.substr(pos, 3).toLowerCase() === "aug") {
                        result1 = input.substr(pos, 3);
                        pos += 3;
                      } else {
                        result1 = null;
                        if (reportFailures === 0) {
                          matchFailed("\"aug\"");
                        }
                      }
                      if (result1 === null) {
                        if (input.substr(pos, 3).toLowerCase() === "dim") {
                          result1 = input.substr(pos, 3);
                          pos += 3;
                        } else {
                          result1 = null;
                          if (reportFailures === 0) {
                            matchFailed("\"dim\"");
                          }
                        }
                        if (result1 === null) {
                          if (input.substr(pos, 3).toLowerCase() === "dom") {
                            result1 = input.substr(pos, 3);
                            pos += 3;
                          } else {
                            result1 = null;
                            if (reportFailures === 0) {
                              matchFailed("\"dom\"");
                            }
                          }
                          if (result1 === null) {
                            if (/^[\u0394\-+\xB0o\xF8]/.test(input.charAt(pos))) {
                              result1 = input.charAt(pos);
                              pos++;
                            } else {
                              result1 = null;
                              if (reportFailures === 0) {
                                matchFailed("[\\u0394\\-+\\xB0o\\xF8]");
                              }
                            }
                            if (result1 === null) {
                              if (input.substr(pos, 4).toLowerCase() === "sus2") {
                                result1 = input.substr(pos, 4);
                                pos += 4;
                              } else {
                                result1 = null;
                                if (reportFailures === 0) {
                                  matchFailed("\"sus2\"");
                                }
                              }
                              if (result1 === null) {
                                if (input.substr(pos, 4).toLowerCase() === "sus4") {
                                  result1 = input.substr(pos, 4);
                                  pos += 4;
                                } else {
                                  result1 = null;
                                  if (reportFailures === 0) {
                                    matchFailed("\"sus4\"");
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            if (/^[67]/.test(input.charAt(pos))) {
              result2 = input.charAt(pos);
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("[67]");
              }
            }
            if (result2 === null) {
              if (input.substr(pos, 2) === "11") {
                result2 = "11";
                pos += 2;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("\"11\"");
                }
              }
              if (result2 === null) {
                if (input.substr(pos, 2) === "13") {
                  result2 = "13";
                  pos += 2;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"13\"");
                  }
                }
              }
            }
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              pos2 = pos;
              if (input.charCodeAt(pos) === 47) {
                result3 = "/";
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("\"/\"");
                }
              }
              if (result3 !== null) {
                result4 = parse_note();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = pos2;
                }
              } else {
                result3 = null;
                pos = pos2;
              }
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, root, quality, add, bass) {
            quality = {M: 'major', m: 'minor'}[quality] || quality || 'major';
            quality = quality.toLowerCase();
            quality = {maj: 'major', min: 'minor', 'Δ': 'major', '-': 'minor', '+': 'aug', '°': 'dim', 'o': 'dim', 'ø': ''}[quality] || quality;
            return {
              root: root
            , quality: quality || 'major'
            , bass: bass && bass[1]
            , add: add};
          })(pos0, result0[0], result0[1], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_progression() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_chord();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          pos3 = pos;
          result2 = parse_s();
          result2 = result2 !== null ? result2 : "";
          if (result2 !== null) {
            if (/^[\-\u2013\u2014]/.test(input.charAt(pos))) {
              result3 = input.charAt(pos);
              pos++;
            } else {
              result3 = null;
              if (reportFailures === 0) {
                matchFailed("[\\-\\u2013\\u2014]");
              }
            }
            if (result3 !== null) {
              result4 = parse_s();
              result4 = result4 !== null ? result4 : "";
              if (result4 !== null) {
                result2 = [result2, result3, result4];
              } else {
                result2 = null;
                pos = pos3;
              }
            } else {
              result2 = null;
              pos = pos3;
            }
          } else {
            result2 = null;
            pos = pos3;
          }
          if (result2 === null) {
            result2 = parse_s();
          }
          if (result2 !== null) {
            result3 = parse_chord();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            pos3 = pos;
            result2 = parse_s();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              if (/^[\-\u2013\u2014]/.test(input.charAt(pos))) {
                result3 = input.charAt(pos);
                pos++;
              } else {
                result3 = null;
                if (reportFailures === 0) {
                  matchFailed("[\\-\\u2013\\u2014]");
                }
              }
              if (result3 !== null) {
                result4 = parse_s();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result2 = [result2, result3, result4];
                } else {
                  result2 = null;
                  pos = pos3;
                }
              } else {
                result2 = null;
                pos = pos3;
              }
            } else {
              result2 = null;
              pos = pos3;
            }
            if (result2 === null) {
              result2 = parse_s();
            }
            if (result2 !== null) {
              result3 = parse_chord();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
            var chords = [head];
            tail.forEach(function(t) {chords.push(t[1])});
            return chords;
          })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_s() {
        var result0, result1;
        
        if (/^[ \t\r\n\f]/.test(input.charAt(pos))) {
          result1 = input.charAt(pos);
          pos++;
        } else {
          result1 = null;
          if (reportFailures === 0) {
            matchFailed("[ \\t\\r\\n\\f]");
          }
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            if (/^[ \t\r\n\f]/.test(input.charAt(pos))) {
              result1 = input.charAt(pos);
              pos++;
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("[ \\t\\r\\n\\f]");
              }
            }
          }
        } else {
          result0 = null;
        }
        return result0;
      }
      
      
      function cleanupExpected(expected) {
        expected.sort();
        
        var lastExpected = null;
        var cleanExpected = [];
        for (var i = 0; i < expected.length; i++) {
          if (expected[i] !== lastExpected) {
            cleanExpected.push(expected[i]);
            lastExpected = expected[i];
          }
        }
        return cleanExpected;
      }
      
      function computeErrorPosition() {
        /*
         * The first idea was to use |String.split| to break the input up to the
         * error position along newlines and derive the line and column from
         * there. However IE's |split| implementation is so broken that it was
         * enough to prevent it.
         */
        
        var line = 1;
        var column = 1;
        var seenCR = false;
        
        for (var i = 0; i < Math.max(pos, rightmostFailuresPos); i++) {
          var ch = input.charAt(i);
          if (ch === "\n") {
            if (!seenCR) { line++; }
            column = 1;
            seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            line++;
            column = 1;
            seenCR = true;
          } else {
            column++;
            seenCR = false;
          }
        }
        
        return { line: line, column: column };
      }
      
      
      var result = parseFunctions[startRule]();
      
      /*
       * The parser is now in one of the following three states:
       *
       * 1. The parser successfully parsed the whole input.
       *
       *    - |result !== null|
       *    - |pos === input.length|
       *    - |rightmostFailuresExpected| may or may not contain something
       *
       * 2. The parser successfully parsed only a part of the input.
       *
       *    - |result !== null|
       *    - |pos < input.length|
       *    - |rightmostFailuresExpected| may or may not contain something
       *
       * 3. The parser did not successfully parse any part of the input.
       *
       *   - |result === null|
       *   - |pos === 0|
       *   - |rightmostFailuresExpected| contains at least one failure
       *
       * All code following this comment (including called functions) must
       * handle these states.
       */
      if (result === null || pos !== input.length) {
        var offset = Math.max(pos, rightmostFailuresPos);
        var found = offset < input.length ? input.charAt(offset) : null;
        var errorPosition = computeErrorPosition();
        
        throw new this.SyntaxError(
          cleanupExpected(rightmostFailuresExpected),
          found,
          offset,
          errorPosition.line,
          errorPosition.column
        );
      }
      
      return result;
    },
    
    /* Returns the parser source code. */
    toSource: function() { return this._source; }
  };
  
  /* Thrown when a parser encounters a syntax error. */
  
  result.SyntaxError = function(expected, found, offset, line, column) {
    function buildMessage(expected, found) {
      var expectedHumanized, foundHumanized;
      
      switch (expected.length) {
        case 0:
          expectedHumanized = "end of input";
          break;
        case 1:
          expectedHumanized = expected[0];
          break;
        default:
          expectedHumanized = expected.slice(0, expected.length - 1).join(", ")
            + " or "
            + expected[expected.length - 1];
      }
      
      foundHumanized = found ? quote(found) : "end of input";
      
      return "Expected " + expectedHumanized + " but " + foundHumanized + " found.";
    }
    
    this.name = "SyntaxError";
    this.expected = expected;
    this.found = found;
    this.message = buildMessage(expected, found);
    this.offset = offset;
    this.line = line;
    this.column = column;
  };
  
  result.SyntaxError.prototype = Error.prototype;
  
  return result;
})();